# exheimdall_daq_fw

./: README.md  pyproject.toml
Firmware/: benchmark_workload.sh  daq_chain_config.ini  daq_start_sm.sh  daq_stop.sh  daq_synthetic_start.sh  ini_checker.py
Firmware/_daq_core/: Makefile  auto_config.py  bcm2711_dma.c  bcm2711_dma.h  daq_db.py  daq_db_records.py  daq_events.py  daq_metrics.py  daq_status_server.py  delay_sync.py  eth_server.h  federation_coordinator.py  federation_health.py  federation_iq_router.py  federation_scheduler.py  fir_decimate.c  fpga_loader.py  gpu_init.py  hat_eeprom.py  hat_gpio_ctrl.c  hat_gpio_ctrl.h  hat_i2c_controller.py  hat_pcie_bridge.c  hat_uart_transport.py  hat_usb3_bridge.c  hat_usb_gadget.py  hw_controller.py  hw_discover.py  iq_server.c  offload.c  offload.h  offload_cpu_kfr.c  offload_cpu_neon.c  offload_engines.py  offload_fpga.c  offload_gpu.c  offload_gpu.py  rebuffer.c  rtl_daq.c  sh_mem_util.c  (+11 more)
Firmware/_daq_core/overlays/: heimdall-hat-pcie.dts  heimdall-hat-spi.dts  heimdall-hat-uart.dts
Firmware/_fpga_gateware/: Makefile
Firmware/_fpga_gateware/constraints/: ecp5_ulx3s.lpf  ice40_orangecrab.pcf
Firmware/_fpga_gateware/rtl/: config_regs.v  fft_radix2.v  fifo_sync.v  fir_decimate.v  fir_mac.v  (+7 more)
Firmware/_testing/: performance_regression_test.py
config_files/performance/: balanced.conf  maximum.conf  minimal.conf
packaging/logrotate/: heimdall
util/: cfg_gen.py  install.sh  irq_tuning.sh  kernel_tuning.conf  performance_monitor.py  system_tuning.py
util/heimdall_ctl/: __main__.py  config.py  formatting.py
(+15 files in other folders)
